# ChangeLog for dev-games/snesreader
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  03 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> -snesreader-1.02.ebuild,
  snesreader-1.03.ebuild:
  Removed cruft. Fixed CFLAGS.

  29 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> snesreader-1.02.ebuild,
  +snesreader-1.03.ebuild:
  Bumped. Removed some left-overs.

  28 Sep 2009; Michał Ziąbkowski <mziab@o2.pl> +snesreader-1.02.ebuild:
  Initial ebuild.
