@@ -1,3 +1,3 @@
-DIST snesreader_v103.tar.bz2 194797 RMD160 a5161950324306040954278faeda97c761efd293 SHA1 cb0bd2531ef0c884b283bd5d6e3876d4ac9799d4 SHA256 810ad7121dc249631fa9c290fcc476a669b0857e5b72211312a6e447018cabbb
-EBUILD snesreader-1.03.ebuild 653 RMD160 047a8e0c153540dc21df0d5336085573b1cfe1dc SHA1 5ebe9fa6c04e91d572561fdadd8594c81f9d42e7 SHA256 ce610d33e1e11074333edbe1de223f923a7d1ef94b4f4138bb01eb3d70713f9b
-MISC ChangeLog 482 RMD160 9496882d107060f40f7e6e913bc2101e3d87dff2 SHA1 bff484cf86dd4312246e5f1c59163743190aa53a SHA256 ea9c19c40e01ccbc83f6b38070f43549a537d84a199e42a4cbacfd8754f8ad0c
+DIST snesreader_v006.tar.bz2 207382 RMD160 499a35bd9d651b35cc5a62566597c78fc9aa9742 SHA1 53e210ca7d7edc5eabb6071f45093cf2e2379ae1 SHA256 d46c1134b01741290535c92a54b3b7c2f5d66a59faf3b164f8ed0c728477136a
+EBUILD snesreader-0.006.ebuild 715 RMD160 d695388ad8f2db07b86429bae77d503ff35f7858 SHA1 d0c98e878d2353e60f575b14f8cc061c1b1e153e SHA256 e0d0e70c42b509881dcbc260c15a01f3e7b3ada47ba00a360433c424293d4438
+MISC ChangeLog 694 RMD160 e43e333099c398e106f555ca4bca8eaf9b2af319 SHA1 c5235a4cd041453498bc2e6bb953638d1080709a SHA256 bf82e1e203ae13f3490927c31e8565583023ee12e2b668edd2d0fd8dd04ac215
